# wolt-backend-internship-2025

./: Checklist.md  README.md  pyproject.toml
dopc/: __main__.py  api_fetchers.py  config.py  helpers.py  service.py
src/: api_fetchers.py  config.py  dopc.py  helpers.py
tests/: test_api_fetchers.py  test_helpers.py  test_service.py
